# instant-messenger

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/app/: App.hpp  Main.cpp
client/include/: Client.hpp
client/includes/: Client.hpp  Host.hpp  IHost.hpp
client/lib/: CMakeLists.txt
client/lib/includes/: Client.hpp  Host.hpp  IHost.hpp
client/lib/source/: Client.cpp  Host.cpp
client/src/: Client.cpp  Host.cpp  Main.cpp
lib/utils/: CMakeLists.txt
lib/utils/includes/: Exceptions.hpp  InputObservable.hpp  InputObserver.hpp  Utils.hpp
lib/utils/source/: InputObservable.cpp  InputObserver.cpp
server/: .gitignore  CMakeLists.txt
server/app/: App.hpp  Main.cpp
server/include/: Listener.hpp
server/includes/: Data.hpp  IListener.hpp  Listener.hpp  Server.hpp
server/lib/: CMakeLists.txt
server/lib/includes/: IListener.hpp  Listener.hpp  Server.hpp
server/lib/source/: Listener.cpp  Server.cpp
server/src/: Listener.cpp  Main.cpp  Server.cpp
tests/: CMakeLists.txt
tests/mocks/: MockHost.hpp  MockListener.hpp
tests/source/: ClientTest.cpp  ServerTest.cpp
tests/src/: ClientTest.cpp  ServerTest.cpp
